remove google, refresh, update name validation
