# docs/swagger.json
@@ -923,121 +923,6 @@
         }
       }
     },
-    "/auth/get-oauth-url": {
-      "get": {
-        "tags": [
-          "Auth with Google"
-        ],
-        "summary": "Get Google OAuth URL",
-        "description": "Get the URL where users can log in via Google OAuth.\nOnce the user is authenticated with Google, they will be redirected to your application.\n",
-        "security": [],
-        "responses": {
-          "200": {
-            "description": "Successfully fetched Google OAuth URL.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Successfully get Google OAuth url!"
-                    },
-                    "data": {
-                      "type": "object",
-                      "properties": {
-                        "url": {
-                          "type": "string",
-                          "example": "https://accounts.google.com/o/oauth2/auth?client_id=..."
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "operationId": "getGoogleOAuthUrl"
-      }
-    },
-    "/auth/confirm-google-auth": {
-      "post": {
-        "tags": [
-          "Auth with Google"
-        ],
-        "summary": "Confirm Google OAuth",
-        "description": "Confirm Google OAuth by sending the authorization code obtained after user authentication.\nReturns an access token if the authentication is successful.\n",
-        "security": [],
-        "requestBody": {
-          "description": "Google OAuth code",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "code": {
-                    "type": "string",
-                    "description": "The authorization code received from Google after user logs in.",
-                    "example": "4/P7q7W91a-oMsCeLvIaQm6bTrgtp7"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successfully logged in via Google OAuth.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Successfully logged in via Google OAuth!"
-                    },
-                    "data": {
-                      "type": "object",
-                      "properties": {
-                        "accessToken": {
-                          "type": "string",
-                          "description": "The access token for the authenticated session.",
-                          "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request - Invalid or missing code."
-          },
-          "401": {
-            "description": "Unauthorized - Invalid Google account or code."
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "operationId": "confirmGoogleAuth"
-      }
-    },
     "/user/profile": {
       "get": {
         "tags": [
