# src/controllers/auth.js
@@ -1,22 +1,22 @@
 import {
   loginUser,
   logoutUser,
-  refreshSession,
+  // refreshSession,
   registerUser,
 } from '../services/auth.js';
-// import { ONE_DAY } from '../constants/index.js';
+import { ONE_DAY } from '../constants/index.js';
 
-const setupSession = (res, session) => {
-  res.cookie('refreshToken', session.refreshToken, {
-    httpOnly: true,
-    expire: new Date(Date.now() + session.refreshTokenValidUntil),
-  });
+// const setupSession = (res, session) => {
+//   res.cookie('refreshToken', session.refreshToken, {
+//     httpOnly: true,
+//     expire: new Date(Date.now() + session.refreshTokenValidUntil),
+//   });
 
-  res.cookie('sessionId', session._id, {
-    httpOnly: true,
-    expire: new Date(Date.now() + session.refreshTokenValidUntil),
-  });
-};
+//   res.cookie('sessionId', session._id, {
+//     httpOnly: true,
+//     expire: new Date(Date.now() + session.refreshTokenValidUntil),
+//   });
+// };
 
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
@@ -31,14 +31,14 @@ export const registerUserController = async (req, res) => {
 export const loginUserController = async (req, res) => {
   const session = await loginUser(req.body);
 
-  // res.cookie('refreshToken', session.refreshToken, {
-  //   httpOnly: true,
-  //   expires: new Date(Date.now() + ONE_DAY),
-  // });
-  // res.cookie('sessionId', session._id, {
-  //   httpOnly: true,
-  //   expires: new Date(Date.now() + ONE_DAY),
-  // });
+  res.cookie('refreshToken', session.refreshToken, {
+    httpOnly: true,
+    expires: new Date(Date.now() + ONE_DAY),
+  });
+  res.cookie('sessionId', session._id, {
+    httpOnly: true,
+    expires: new Date(Date.now() + ONE_DAY),
+  });
 
   setupSession(res, session);
 
@@ -62,44 +62,44 @@ export const logoutUserController = async (req, res) => {
   res.status(204).send();
 };
 
-export const getGoogleAuthUrlController = async (req, res) => {
-  const url = generateAuthUrl();
-  res.json({
-    status: 200,
-    message: 'Successfully get Google OAuth url!',
-    data: {
-      url,
-    },
-  });
-};
+// export const getGoogleAuthUrlController = async (req, res) => {
+//   const url = generateAuthUrl();
+//   res.json({
+//     status: 200,
+//     message: 'Successfully get Google OAuth url!',
+//     data: {
+//       url,
+//     },
+//   });
+// };
 
-export const loginWithGoogleController = async (req, res) => {
-  const session = await loginOrSignupWithGoogle(req.body.code);
-  setupSession(res, session);
+// export const loginWithGoogleController = async (req, res) => {
+//   const session = await loginOrSignupWithGoogle(req.body.code);
+//   setupSession(res, session);
 
-  res.json({
-    status: 200,
-    message: 'Successfully logged in via Google OAuth!',
-    data: {
-      accessToken: session.accessToken,
-    },
-  });
-};
+//   res.json({
+//     status: 200,
+//     message: 'Successfully logged in via Google OAuth!',
+//     data: {
+//       accessToken: session.accessToken,
+//     },
+//   });
+// };
 
-export const refreshController = async (req, res) => {
-  const { refreshToken, sessionId } = req.cookies;
-  const session = await refreshSession({
-    refreshToken,
-    sessionId,
-  });
+// export const refreshController = async (req, res) => {
+//   const { refreshToken, sessionId } = req.cookies;
+//   const session = await refreshSession({
+//     refreshToken,
+//     sessionId,
+//   });
 
-  setupSession(res, session);
+//   setupSession(res, session);
 
-  res.json({
-    status: 200,
-    message: 'Successfully refreshed a session!',
-    data: {
-      accessToken: session.accessToken,
-    },
-  });
-};
+//   res.json({
+//     status: 200,
+//     message: 'Successfully refreshed a session!',
+//     data: {
+//       accessToken: session.accessToken,
+//     },
+//   });
+// };
