# src/routers/auth.js
@@ -3,16 +3,16 @@ import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 import { validateBody } from '../middlewares/validateBody.js';
 import {
   loginUserSchema,
-  loginWithGoogleOAuthSchema,
+  // loginWithGoogleOAuthSchema,
   registerUserSchema,
 } from '../validation/auth.js';
 import {
-  getGoogleAuthUrlController,
-  loginWithGoogleController,
+  // getGoogleAuthUrlController,
+  // loginWithGoogleController,
   logoutUserController,
   loginUserController,
   registerUserController,
-  refreshController,
+  // refreshController,
 } from '../controllers/auth.js';
 
 const router = Router();
@@ -29,16 +29,16 @@ router.post(
   ctrlWrapper(loginUserController),
 );
 
-router.post('/refresh', ctrlWrapper(refreshController));
+// router.post('/refresh', ctrlWrapper(refreshController));
 
 router.post('/logout', ctrlWrapper(logoutUserController));
 
-router.get('/get-oauth-url', ctrlWrapper(getGoogleAuthUrlController));
+// router.get('/get-oauth-url', ctrlWrapper(getGoogleAuthUrlController));
 
-router.post(
-  '/confirm-google-auth',
-  validateBody(loginWithGoogleOAuthSchema),
-  ctrlWrapper(loginWithGoogleController),
-);
+// router.post(
+//   '/confirm-google-auth',
+//   validateBody(loginWithGoogleOAuthSchema),
+//   ctrlWrapper(loginWithGoogleController),
+// );
 
 export default router;
